--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Engineer Vacancy</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Inter', sans-serif; background-color: #0f172a; color: #f8fafc; }
+        .mono { font-family: 'JetBrains Mono', monospace; }
+        .gradient-text { background: linear-gradient(90deg, #38bdf8, #818cf8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+    </style>
+</head>
+<body class="leading-relaxed">
+
+    <!-- Hero Section -->
+    <section class="max-w-4xl mx-auto px-6 pt-20 pb-16 text-center">
+        <div class="inline-block px-4 py-1 mb-6 border border-sky-500/30 rounded-full bg-sky-500/10 text-sky-400 text-sm mono">
+            Middle+ / Senior Data Engineer
+        </div>
+        <h1 class="text-5xl md:text-6xl font-extrabold mb-6 tracking-tight">
+            Строим архитектуру данных <span class="gradient-text underline decoration-sky-500/30">без legacy</span>
+        </h1>
+        <p class="text-xl text-slate-400 mb-10 max-w-2xl mx-auto">
+            Ищем инженера, который превратит хаос сырых данных в надежный фундамент для ML и аналитики.
+        </p>
+        <div class="flex flex-wrap justify-center gap-3 mono text-sm mb-12">
+            <span class="bg-slate-800 px-3 py-1 rounded">Python</span>
+            <span class="bg-slate-800 px-3 py-1 rounded">Airflow</span>
+            <span class="bg-slate-800 px-3 py-1 rounded">Spark</span>
+            <span class="bg-slate-800 px-3 py-1 rounded">ClickHouse</span>
+            <span class="bg-slate-800 px-3 py-1 rounded">dbt</span>
+        </div>
+        <a href="#apply" class="bg-sky-500 hover:bg-sky-400 text-white font-bold py-4 px-8 rounded-lg transition-all transform hover:scale-105 shadow-lg shadow-sky-500/20">
+            Откликнуться на вакансию
+        </a>
+    </section>
+
+    <!-- Content Area -->
+    <main class="max-w-3xl mx-auto px-6 py-12 space-y-20">
+        
+        <!-- О проекте -->
+        <section>
+            <h2 class="text-2xl font-bold mb-6 flex items-center gap-2">
+                <span class="text-sky-500">01.</span> О проекте
+            </h2>
+            <div class="bg-slate-800/50 p-6 rounded-xl border border-slate-700 space-y-4">
+                <p>Мы строим <strong>Data Platform</strong>, которая обрабатывает более <strong>50 ТБ</strong> данных ежедневно. Ваши пайплайны будут питать систему предиктивной аналитики и real-time дашборды.</p>
+                <ul class="list-disc list-inside text-slate-400 space-y-2">
+                    <li>Источники: 30+ API, Kafka streams, Clickstream.</li>
+                    <li>Культура: Сами выбираете архитектурный путь.</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Задачи -->
+        <section>
+            <h2 class="text-2xl font-bold mb-6 flex items-center gap-2 text-white">
+                <span class="text-sky-500">02.</span> Что предстоит делать
+            </h2>
+            <ul class="space-y-4 text-slate-300">
+                <li class="flex gap-3">
+                    <span class="text-sky-500 font-bold">→</span>
+                    Проектировать ETL/ELT процессы и развивать DWH (Snowflake/Greenplum).
+                </li>
+                <li class="flex gap-3">
+                    <span class="text-sky-500 font-bold">→</span>
+                    Оптимизировать ресурсы Spark-кластера и запросы в ClickHouse.
+                </li>
+                <li class="flex gap-3">
+                    <span class="text-sky-500 font-bold">→</span>
+                    Внедрять Data Quality проверки (код должен быть тестируемым).
+                </li>
+            </ul>
+        </section>
+
+        <!-- Бенефиты -->
+        <section class="grid md:grid-cols-2 gap-6 text-sm">
+            <div class="p-5 border border-slate-800 rounded-lg">
+                <h3 class="font-bold mb-2">Remote First</h3>
+                <p class="text-slate-400">Работай из любой точки мира или в офисе. Гибкое начало дня.</p>
+            </div>
+            <div class="p-5 border border-slate-800 rounded-lg">
+                <h3 class="font-bold mb-2">No Micromanagement</h3>
+                <p class="text-slate-400">У нас High Trust культура. Главное — результат, а не часы в Slack.</p>
+            </div>
+        </section>
+
+        <!-- CTA / Hiring Process -->
+        <section id="apply" class="text-center py-12 border-t border-slate-800">
+            <h2 class="text-3xl font-bold mb-8">Наш процесс найма</h2>
+            <div class="flex flex-col md:flex-row justify-between gap-4 mb-12 text-sm mono text-slate-400">
+                <div class="flex-1 p-4 bg-slate-900 rounded">1. Скрининг (30м)</div>
+                <div class="flex-1 p-4 bg-slate-900 rounded">2. Тех-интервью (90м)</div>
+                <div class="flex-1 p-4 bg-slate-900 rounded">3. Финал с Lead</div>
+            </div>
+            <p class="mb-8 text-slate-400">Готовы обсудить задачи? Пишите нам прямо сейчас.</p>
+            <a href="mailto:hr@company.com" class="text-sky-400 text-xl font-bold border-b-2 border-sky-400 hover:text-white hover:border-white transition-all">
+                hr@yourcompany.com
+            </a>
+        </section>
+    </main>
+
+    <footer class="text-center pb-10 text-slate-600 text-xs mono">
+        © 2024 YourCompany Tech Team • Made with code and coffee
+    </footer>
+
+</body>
+</html>
 
